release-data/changelogs/9.1/plugins/scale-out-relay.adoc
= Changelogs for Rudder plugin scale-out-relay 9.1.\* versions

== scale-out-relay-9.1.2-2.1 (2026-06-11)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.1.1-2.1 (2026-05-04)

=== Changes


==== Miscellaneous

* Relay-to-node operation succeeds even if some nodes still depend on relay
    (https://issues.rudder.io/issues/28657[#28657])

=== Bug fixes

==== Miscellaneous

* Fixed: Relay operations info logs have NodeId in them
    (https://issues.rudder.io/issues/28649[#28649])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.1.0-2.1 (2026-04-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.1.0.rc1-2.1 (2026-04-10)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Error log when rolling back a node should not be at debug level
    (https://issues.rudder.io/issues/28494[#28494])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.1.0.beta1-2.1 (2026-03-10)

=== Changes


==== Miscellaneous

* Start of promoting and demoting should be info level log
    (https://issues.rudder.io/issues/28475[#28475])

==== Plugins management

* License should check instance id if defined 
    (https://issues.rudder.io/issues/28273[#28273])

=== Bug fixes

==== Plugins management

* Fixed: Update templating-maven-plugin since 1.0 API doesn't work with recent maven anymore (public)
    (https://issues.rudder.io/issues/28279[#28279])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.1.0.alpha1-2.1 (2026-01-26)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

